c4prj2_input/grade.txt
Grading at Sun Jul 21 04:36:17 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:29:10: error: implicit declaration of function ‘strchr’ [-Werror=implicit-function-declaration]
   ptNl = strchr(str, '\n');
          ^
input.c:29:10: error: incompatible implicit declaration of built-in function ‘strchr’ [-Werror]
input.c:29:10: note: include ‘<string.h>’ or provide a declaration of ‘strchr’
input.c:54:13: error: implicit declaration of function ‘strlen’ [-Werror=implicit-function-declaration]
   while(i < strlen(str)) {
             ^
input.c:54:13: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
input.c:54:13: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
input.c:82:10: error: implicit declaration of function ‘isdigit’ [-Werror=implicit-function-declaration]
       if(isdigit(str[i+2])) {
          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
